--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.0",
+    "chunk": "0.0.2",
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "geotiff": "^0.4.1",
