--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "georaster",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
-  "main": "dist/georaster_es2015.js",
+  "main": "dist/georaster.dist.js",
   "scripts": {
-    "babel": "babel --presets es2015 src/georaster.js -o dist/georaster_es2015.js",
+    "babel": "babel src/georaster.js -o dist/georaster.dist.js",
+    "build-geotiff": "cd node_modules/geotiff && npm install && npm run build",
     "browserify": "npm run babel && cd dist && browserify georaster_es2015.js -o georaster.browserify.js",
     "build": "npm run browserify",
-    "test": "npm run babel && ./node_modules/.bin/mocha --reporter spec",
-    "jsdoc": "jsdoc packages -r -d docs",
-    "start": "node test-app.js"
+    "test": "npm run babel && ./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -31,33 +30,19 @@
   },
   "homepage": "https://github.com/GeoTIFF/georaster#readme",
   "dependencies": {
-    "babel-loader": "^7.1.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.0",
-    "chunk": "0.0.2",
-    "express": "^4.15.4",
-    "fs": "0.0.1-security",
-    "geotiff": "^0.4.1",
-    "leaflet": "^1.1.0",
-    "mocha": "^3.5.0",
-    "node-fetch": "^1.7.1",
+    "geotiff": "github:constantinius/geotiff.js",
     "path": "^0.12.7",
-    "proj4": "^2.4.3",
-    "request": "^2.81.0",
     "simple-xml-dom": "^1.0.0",
-    "turf": "^3.0.14",
     "underscore": "^1.8.3",
     "webpack": "^3.5.4",
     "xmldom": "^0.1.27",
     "xpath": "0.0.27"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browserify": "^14.5.0",
-    "jsdoc": "^3.5.5",
-    "memory-fs": "^0.4.1",
-    "request": "^2.81.0"
+    "chai": "^4.1.0",
+    "mocha": "^3.5.0"
   }
 }
