removed build-geotiff because geotiff.js is up to date now

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ notifications:
     email:
         - daniel.j.dufour@gmail.com
 
-install: npm install && npm run build-geotiff
+install: npm install
 
 before_script: cd data && bash setup_data.sh
 
