--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/GeoTIFF/georaster#readme",
   "dependencies": {
+    "buffer": "^5.2.1",
     "geotiff": "^1.0.0-beta.6",
+    "node-fetch": "^2.3.0",
     "path": "^0.12.7",
     "simple-xml-dom": "^1.0.0",
     "underscore": "^1.8.3",
