--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "georaster",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
   "main": "dist/georaster.bundle.min.js",
   "scripts": {
+    "browserify": "browserify src/index.js -o georaster.browserify.js",
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
     "test": "npm run test-dev",
@@ -48,6 +49,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "browserify": "^14.5.0",
     "chai": "^4.1.0",
     "eslint": "^5.7.0",
     "eslint-config-google": "^0.11.0",
