--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "georaster",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
   "main": "dist/georaster.bundle.min.js",
   "browser": {
     "./dist/georaster.bundle.min.js": "./dist/georaster.browser.bundle.min.js"
   },
+  "unpkg": "./dist/georaster.browser.bundle.min.js",
   "scripts": {
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
