--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "unpkg": "./dist/georaster.browser.bundle.min.js",
   "scripts": {
+    "analyze": "ANALYZE_GEORASTER_BUNDLE=true npm run build",
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
     "test": "npm run test-dev",
@@ -58,6 +59,7 @@
     "eslint-config-google": "^0.11.0",
     "mocha": "^6.2.0",
     "webpack": "^4.12.0",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.0.8"
   }
 }
