--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "georaster",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
   "main": "dist/georaster.bundle.min.js",
   "browser": {
@@ -16,7 +16,10 @@
     "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./node_modules/.bin/mocha --reporter spec",
     "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.min.js' node ./node_modules/.bin/mocha --reporter spec",
     "dev": "webpack --mode development --target node && webpack --mode development --target web",
-    "build": "webpack --mode production --target node && webpack --mode production --target web"
+    "build": "npm run build:prod",
+    "build:prod": "npm run build:prod:node && npm run build:prod:web",
+    "build:prod:node": "webpack --mode production --target node",
+    "build:prod:web": "webpack --mode production --target web"
   },
   "repository": {
     "type": "git",
@@ -40,9 +43,11 @@
   "dependencies": {
     "cross-fetch": "^3.0.4",
     "georaster-to-canvas": "0.2.0",
-    "geotiff": "^1.0.0-beta.6",
-    "path": "^0.12.7",
+    "geotiff": "^1.0.0-beta.10",
     "simple-xml-dom": "^1.0.0",
+    "tiny-worker": "^2.3.0",
+    "ts-node": "^8.8.2",
+    "txml": "^3.1.2",
     "underscore": "^1.8.3",
     "worker-loader": "^2.0.0",
     "xmldom": "^0.1.27",
