--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "georaster",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
   "main": "dist/georaster.bundle.min.js",
   "browser": {
@@ -9,6 +9,7 @@
   "unpkg": "./dist/georaster.browser.bundle.min.js",
   "scripts": {
     "analyze": "ANALYZE_GEORASTER_BUNDLE=true npm run build",
+    "clean": "rm -f ./dist/*",
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
     "test": "npm run test-dev",
@@ -16,10 +17,12 @@
     "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./node_modules/.bin/mocha --reporter spec",
     "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.min.js' node ./node_modules/.bin/mocha --reporter spec",
     "dev": "webpack --mode development --target node && webpack --mode development --target web",
-    "build": "npm run build:prod",
+    "build": "npm run prebuild && npm run build:prod",
+    "mod-geotiff-js": "./node_modules/replace-in-files-cli/cli.js ./node_modules/geotiff/src/pool.js --string=\"import 'threads/register';\" --replacement=\"import { Worker } from 'threads';\"",
     "build:prod": "npm run build:prod:node && npm run build:prod:web",
     "build:prod:node": "webpack --mode production --target node",
-    "build:prod:web": "webpack --mode production --target web"
+    "build:prod:web": "webpack --mode production --target web",
+    "prebuild": "npm run clean && npm run mod-geotiff-js"
   },
   "repository": {
     "type": "git",
@@ -45,6 +48,7 @@
     "georaster-to-canvas": "0.2.0",
     "geotiff": "^1.0.0-beta.10",
     "simple-xml-dom": "^1.0.0",
+    "threads": "^1.4.0",
     "tiny-worker": "^2.3.0",
     "ts-node": "^8.8.2",
     "txml": "^3.1.2",
@@ -54,6 +58,7 @@
     "xpath": "0.0.27"
   },
   "devDependencies": {
+    "@babel/types": "^7.9.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -63,6 +68,8 @@
     "eslint": "^5.7.0",
     "eslint-config-google": "^0.11.0",
     "mocha": "^6.2.0",
+    "replace-in-files-cli": "^0.3.1",
+    "threads-plugin": "^1.3.1",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.0.8"
