added support for colormaps

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@ package-lock.json
 
 # test data files
 data/geonode_atlanteil.tif
+data/*.json
 data/*.xml
 data/rgb_raster.tif
+data/*.tif
 stats.json
