--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "georaster",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
   "main": "dist/georaster.bundle.min.js",
   "browser": "./dist/georaster.browser.bundle.min.js",
@@ -9,6 +9,7 @@
     "analyze": "ANALYZE_GEORASTER_BUNDLE=true npm run build",
     "clean": "rm -f ./dist/*",
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
+    "lint": "npm run eslint",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
     "test": "npm run test-dev",
     "test-all": "npm run test-dev && npm run test-prod",
@@ -63,6 +64,7 @@
     "eslint": "^5.7.0",
     "eslint-config-google": "^0.11.0",
     "mocha": "^6.2.0",
+    "null-loader": "^4.0.1",
     "threads-plugin": "^1.3.1",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^3.6.0",
