--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-preset-env": "^1.7.0",
     "browserify": "^14.5.0",
     "chai": "^4.1.0",
+    "d3-require": "^1.2.4",
     "eslint": "^5.7.0",
     "eslint-config-google": "^0.11.0",
     "mocha": "^6.2.0",
