--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./node_modules/.bin/mocha --reporter spec",
     "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.min.js' node ./node_modules/.bin/mocha --reporter spec",
     "dev": "webpack --mode development --target node && webpack --mode development --target web",
-    "build": "npm run build:prod",
+    "build": "npm run build:prod && npm run build:types",
     "build:prod": "npm run build:prod:node && npm run build:prod:web",
     "build:prod:node": "webpack --mode production --target node",
-    "build:prod:web": "webpack --mode production --target web"
+    "build:prod:web": "webpack --mode production --target web",
+    "build:types": "cp src/georaster.d.ts dist/georaster.d.ts"
   },
   "repository": {
     "type": "git",
