--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test-all": "npm run test-dev && npm run test-prod",
     "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./node_modules/.bin/mocha --reporter spec",
     "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.min.js' node ./node_modules/.bin/mocha --reporter spec",
+    "test-types": "npx ts-node --compiler-options '{\"esModuleInterop\":true, \"module\":\"commonjs\"}' test/test.ts",
     "dev": "webpack --mode development --target node && webpack --mode development --target web",
     "build": "npm run build:prod && npm run build:types",
     "build:prod": "npm run build:prod:node && npm run build:prod:web",
@@ -69,6 +70,7 @@
     "mocha": "^6.2.0",
     "null-loader": "^4.0.1",
     "threads-plugin": "^1.3.1",
+    "typescript": "^4.3.5",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.0.8"
