WORK IN PROGRESS

--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
   "name": "georaster",
-  "version": "1.1.0",
-  "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
-  "main": "dist/georaster.bundle.min.js",
+  "version": "2.0.0",
+  "description": "Wrapper around Georeferenced Rasters like ASCII Grid, GeoTIFF, JPG, and PNG that provides a standard interface",
+  "main": "dist/georaster.min.js",
+  "type": "module",
   "browser": {
-    "./dist/georaster.bundle.min.js": "./dist/georaster.browser.bundle.min.js"
+    "./dist/georaster.min.js": "./dist/georaster.browser.min.js",
+    "ts-loader": false,
+    "ts-node": false
   },
-  "unpkg": "./dist/georaster.browser.bundle.min.js",
+  "unpkg": "./dist/georaster.browser.min.js",
   "scripts": {
-    "analyze": "ANALYZE_GEORASTER_BUNDLE=true npm run build",
+    "analyze": "webpack --mode production --target web --config ./webpack.analyze.js",
     "clean": "rm -f ./dist/*",
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
+    "format": "prettier --arrow-parens=avoid --print-width=160 --tab-width=4 --trailing-comma=none --write src/*.js src/*/*.js test/*.js",
     "test": "npm run test-dev",
     "test-all": "npm run test-dev && npm run test-prod",
-    "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./node_modules/.bin/mocha --reporter spec",
-    "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.min.js' node ./node_modules/.bin/mocha --reporter spec",
-    "dev": "webpack --mode development --target node && webpack --mode development --target web",
+    "test-dev": "npm run build:dev:node && GEORASTER_TEST_BUNDLE_NAME='georaster.js' ava",
+    "test-prod": "npm run build && GEORASTER_TEST_BUNDLE_NAME='georaster.min.js' ava",
+    "test:dev:asc": "node test/test.asc.js",
+    "test:dev:obj": "node test/test.object.js",
+    "test:dev:png": "node test/test.png.js",
+    "test:dev:prj": "node test/test.prj.js",
+    "test:dev:tif": "node test/test.tif.js",
     "build": "npm run build:prod",
+    "build:dev": "npm run build:dev:node && npm run build:dev:web",
+    "build:dev:node": "webpack --mode development --target node",
+    "build:dev:web": "webpack --mode development --target web",
     "build:prod": "npm run build:prod:node && npm run build:prod:web",
     "build:prod:node": "webpack --mode production --target node",
-    "build:prod:web": "webpack --mode production --target web"
+    "build:prod:web": "webpack --mode production --target web",
+    "dev": "npm run build:dev:node",
+    "setup": "cd data && bash setup_data.sh"
   },
   "repository": {
     "type": "git",
@@ -42,35 +55,77 @@
   },
   "homepage": "https://github.com/GeoTIFF/georaster#readme",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
+    "@fast-pixel/clip": "0.0.1",
+    "ascii-grid": "^1.3.1",
+    "aux-xml": "0.0.0",
     "cross-fetch": "^3.0.4",
+    "does-url-exist": "0.0.1",
+    "fetch-if": "0.0.1",
+    "fix-buffer": "0.0.0",
+    "geo-file-type": "0.0.3",
+    "geometadata": "0.0.0",
     "georaster-to-canvas": "0.2.0",
-    "geotiff": "^1.0.0-beta.12",
+    "geotiff": "^1.0.0-beta.13",
+    "geotiff-from": "0.0.1",
     "geotiff-palette": "0.0.0",
-    "simple-xml-dom": "^1.0.0",
-    "threads": "^1.4.0",
-    "tiny-worker": "^2.3.0",
-    "ts-node": "^8.8.2",
-    "txml": "^3.1.2",
-    "underscore": "^1.8.3",
+    "geotiff-stats": "0.0.5",
+    "geowarp": "^0.5.0",
+    "get-epsg-code": "0.0.5",
+    "id-png": "0.0.0",
+    "id-tif": "0.0.1",
+    "is-png": "^2.0.0",
+    "is-prj": "0.0.3",
+    "is-wld": "^1.0.0",
+    "mrf": "^0.3.0",
+    "pixel-stats": "0.0.0",
+    "pngjs": "^3.4.0",
+    "read-jpg": "0.0.2",
+    "read-png": "0.0.1",
+    "readim": "^0.0.2",
+    "tableate": "0.0.0",
+    "to-text-string": "^0.0.1",
+    "toab": "^2.0.0",
+    "ts-node": "^9.0.0",
+    "universal-worker": "^0.1.0",
+    "wld-reader": "^0.9.0",
+    "worker-fns": "^0.2.0",
     "worker-loader": "^2.0.0",
-    "xmldom": "^0.1.27",
-    "xpath": "0.0.27"
+    "worker-post-message": "^0.1.0",
+    "xdim": "^0.0.1",
+    "xml-utils": "0.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/register": "^7.8.3",
     "@babel/types": "^7.9.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
     "browserify": "^14.5.0",
-    "chai": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^5.7.0",
     "eslint-config-google": "^0.11.0",
-    "mocha": "^6.2.0",
+    "fast-brc": "0.0.1",
+    "fast-counter": "^0.0.0",
+    "find-and-read": "^1.0.0",
+    "flug": "^1.1.0",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^2.1.1",
+    "regenerator-runtime": "^0.13.3",
     "replace-in-files-cli": "^0.3.1",
+    "rollup": "^2.35.1",
     "threads-plugin": "^1.3.1",
-    "webpack": "^4.12.0",
+    "tiny-worker": "^2.3.0",
+    "ts-loader": "^8.0.3",
+    "txml": "^3.2.5",
+    "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   }
 }
