--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "georaster",
   "version": "1.5.6",
   "description": "Wrapper around Georeferenced Rasters like GeoTIFF, NetCDF, JPG, and PNG that provides a standard interface",
-  "main": "dist/georaster.bundle.min.js",
-  "browser": "./dist/georaster.browser.bundle.min.js",
-  "unpkg": "./dist/georaster.browser.bundle.min.js",
+  "main": "dist/node/georaster.js",
+  "unpkg": "/dist/jsbundle/georaster.bundle.min.js",
+  "jsdelivr": "/dist/jsbundle/georaster.bundle.min.js",
+  "exports": {
+    ".": {
+      "import": "./dist/es/georaster.js",
+      "require": "./dist/node/georaster.js",
+      "browser": "./dist/js/georaster.js"
+    }
+  },
   "type": "module",
   "scripts": {
     "analyze": "ANALYZE_GEORASTER_BUNDLE=true npm run build",
@@ -36,19 +43,15 @@
   "homepage": "https://github.com/GeoTIFF/georaster#readme",
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "esm": "^3.2.25",
     "georaster-to-canvas": "0.2.0",
     "geotiff": "^2.0.5",
-    "geotiff-palette": "0.0.0",
-    "node-fetch": "^3.2.3"
+    "geotiff-palette": "0.0.0"
   },
   "devDependencies": {
     "@babel/types": "^7.9.5",
     "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.2.0",
-    "@rollup/plugin-replace": "^4.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
