patch geotiff to avoid redundant reads of pixel-interleaved files
Backport https://github.com/geotiffjs/geotiff.js/pull/380

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "node ./node_modules/eslint/bin/eslint.js src",
     "lint": "npm run eslint",
     "fix": "node ./node_modules/eslint/bin/eslint.js src --fix",
+    "postinstall": "patch-package",
     "test": "npm run test-dev",
     "test-all": "npm run test-dev && npm run test-prod",
     "test-dev": "npm run dev && GEORASTER_TEST_BUNDLE_NAME='georaster.bundle.js' node ./test/test.js",
@@ -51,6 +52,8 @@
     "georaster-to-canvas": "0.2.0",
     "geotiff": "1.0.0-beta.13",
     "geotiff-palette": "0.0.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "threads": "^1.4.0",
     "tiny-worker": "^2.3.0",
     "ts-node": "^8.8.2",
